cloud-apps/dad-joke-hotline/src/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dad-joke-hotline
  namespace: dad-joke-hotline
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dad-joke-hotline
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dad-joke-hotline
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: backend
          image: ghcr.io/dannixon/dad-joke-hotline:4fbb3afe26a90efe699aeb82ddd919f2316fa461
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: dad-joke-hotline
spec:
  selector:
    app.kubernetes.io/name: dad-joke-hotline
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
