cloud-apps/dad-joke-hotline/src/k8s/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: dad-joke-hotline
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`dad-joke-hotline.emfcamp.dan-nixon.com`)
      services:
        - Kind: Service
          name: http
          port: 8000
  tls:
    secretName: tls-cert
